Add keyboards and calculate button

--- a/window-shopper/Base.lproj/Main.storyboard
+++ b/window-shopper/Base.lproj/Main.storyboard
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="window_shopper" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gz6-QK-5L1"/>
+                        <viewControllerLayoutGuide type="bottom" id="STN-as-RoM"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperBG" translatesAutoresizingMaskIntoConstraints="NO" id="BaO-94-gNN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windowShopperIcon" translatesAutoresizingMaskIntoConstraints="NO" id="GhE-L2-RfP">
+                                <rect key="frame" x="157" y="55" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="0el-ai-zCx"/>
+                                    <constraint firstAttribute="width" constant="60" id="2wA-d8-rZZ"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EHs-Bh-A0W" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="36" y="150" width="303" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="JyG-ps-DmJ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uIJ-p6-6Kb" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="36" y="215" width="303" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Oml-rb-Evf"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="uIJ-p6-6Kb" firstAttribute="height" secondItem="EHs-Bh-A0W" secondAttribute="height" id="H8C-rS-SEb"/>
+                            <constraint firstItem="uIJ-p6-6Kb" firstAttribute="leading" secondItem="EHs-Bh-A0W" secondAttribute="leading" id="IsW-XZ-Sbg"/>
+                            <constraint firstItem="EHs-Bh-A0W" firstAttribute="top" secondItem="GhE-L2-RfP" secondAttribute="bottom" constant="35" id="Nbt-pb-Rnb"/>
+                            <constraint firstItem="GhE-L2-RfP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RCk-UP-YOw"/>
+                            <constraint firstItem="uIJ-p6-6Kb" firstAttribute="trailing" secondItem="EHs-Bh-A0W" secondAttribute="trailing" id="a2B-mI-Cla"/>
+                            <constraint firstItem="BaO-94-gNN" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="idH-VV-jh9"/>
+                            <constraint firstItem="BaO-94-gNN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kUX-kO-ljh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EHs-Bh-A0W" secondAttribute="trailing" constant="20" id="quo-rc-Hxo"/>
+                            <constraint firstItem="GhE-L2-RfP" firstAttribute="top" secondItem="gz6-QK-5L1" secondAttribute="bottom" constant="35" id="rHg-Ws-Hey"/>
+                            <constraint firstItem="uIJ-p6-6Kb" firstAttribute="top" secondItem="EHs-Bh-A0W" secondAttribute="bottom" constant="25" id="t2H-Oy-azY"/>
+                            <constraint firstItem="BaO-94-gNN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tuX-Z3-jtL"/>
+                            <constraint firstItem="BaO-94-gNN" firstAttribute="bottom" secondItem="STN-as-RoM" secondAttribute="top" id="xRt-dF-maY"/>
+                            <constraint firstItem="EHs-Bh-A0W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="z3F-v6-Gx3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="priceTxt" destination="uIJ-p6-6Kb" id="FMh-co-xY2"/>
+                        <outlet property="wageTxt" destination="EHs-Bh-A0W" id="BC9-TK-Rmq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="windowShopperBG" width="414" height="736"/>
+        <image name="windowShopperIcon" width="115" height="115"/>
+    </resources>
 </document>
